Showing candidates based on a delegate threshold to avoid awkward cutoffs in ties.

--- a/css/interactive.css
+++ b/css/interactive.css
@@ -30,7 +30,7 @@
   max-width: 40%;
   position: absolute;
   right: 15px;
-  bottom: 45px;
+  bottom: 70px;
   border: 1px solid var(--grey-5);
   padding: 3px 5px;
 }
